jlox/grammar
program -> declaration* EOF ;
declaration -> classDecl | funDecl | varDecl | statement ;
statement -> exprStmt
 | printStmt
 | block
 | ifStmt
 | whileStmt
 | forStmt
 | returnStmt;

classDecl -> "class" IDENTIFIER ( "<" IDENTIFIER )? "{" function* "}" ;
funDecl -> "fun" function ;
function -> IDENTIFIER "(" parameters? ")" block ;
parameters -> IDENTIFIER ( "," IDENTIFIER )* ;
returnStmt -> "return" expression? ";" ;
forStmt -> "for" "(" ( varDecl | expression | ";" )
    expression? ";"
    expression? ")" statement ;
whileStmt -> "while" "(" expression ")" statement ;
ifStmt -> "if" "(" expression ")" statement ( "else" statement )? ;
block -> "{" declaration* "}" ;
varDecl -> "var" IDENTIFIER ( "=" expression )? ";";
exprStmt -> expression ";" ;
printStmt -> "print" expression ";" ;

expression -> assignment ;
assignment -> ( call "." )? IDENTIFIER "=" assignment | logic_or ;
logic_or -> logic_and ( "or" logic_and )* ;
logic_and -> equality ( "and" equality )* ;
equality -> comparison ( ( "!=" | "==" ) comparison )* ;
comparison -> term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term -> factor ( ( "-" | "+" ) factor )* ;
factor -> unary ( ( "/" | "*" ) unary )* ;
unary -> ( "!" | "-" ) unary | call ;
call -> primary ( "(" arguments? ")" | "." IDENTIFIER )* ;
arguments -> expression ( "," expression )* ;
primary -> NUMBER | STRING | "true" | "false" | "nil"
| "this" | "(" expression ")" | IDENTIFIER
| "super" "." IDENTIFIER;
